RESOLVED FIXED158132
EventHandler finds incorrect scrollable container.
https://bugs.webkit.org/show_bug.cgi?id=158132
Summary EventHandler finds incorrect scrollable container.
alan
Reported 2016-05-26 15:10:01 PDT
Created attachment 279914 [details] Test reduction 1. Load test page 2. Scroll to the bottom 3. Scroll horizontally Expected result: bottom container scrolls Actual result: top container scrolls (8 out of 10)
Attachments
Test reduction (376 bytes, text/html)
2016-05-26 15:10 PDT, alan
no flags
Patch (2.01 KB, patch)
2016-05-26 16:00 PDT, alan
no flags
Patch (5.92 KB, patch)
2016-05-27 15:07 PDT, alan
no flags
Patch (5.91 KB, patch)
2016-05-27 15:09 PDT, alan
no flags
Archive of layout-test-results from ews102 for mac-yosemite (838.84 KB, application/zip)
2016-05-27 15:50 PDT, Build Bot
no flags
Archive of layout-test-results from ews123 for ios-simulator-wk2 (687.32 KB, application/zip)
2016-05-27 16:03 PDT, Build Bot
no flags
Archive of layout-test-results from ews114 for mac-yosemite (1.45 MB, application/zip)
2016-05-27 16:12 PDT, Build Bot
no flags
Patch (7.31 KB, patch)
2016-05-27 16:21 PDT, alan
no flags
alan
Comment 1 2016-05-26 15:10:27 PDT
alan
Comment 2 2016-05-26 16:00:26 PDT
Brent Fulgham
Comment 3 2016-05-26 16:38:31 PDT
Comment on attachment 279919 [details] Patch Zalan and I reviewed this in person. I agree with his change.
alan
Comment 4 2016-05-27 15:07:47 PDT
alan
Comment 5 2016-05-27 15:09:06 PDT
Brent Fulgham
Comment 6 2016-05-27 15:15:48 PDT
Comment on attachment 280001 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=280001&action=review r=me > Source/WebCore/page/mac/EventHandlerMac.mm:820 > + || ((deltaX > 0) && !scrollableArea->scrolledToLeft()) || ((deltaX < 0) && !scrollableArea->scrolledToRight())) { Ugh! Thank you for fixing this!
Build Bot
Comment 7 2016-05-27 15:50:11 PDT
Comment on attachment 280001 [details] Patch Attachment 280001 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/1393488 New failing tests: fast/scrolling/scroll-container-horizontally.html
Build Bot
Comment 8 2016-05-27 15:50:14 PDT
Created attachment 280004 [details] Archive of layout-test-results from ews102 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-yosemite Platform: Mac OS X 10.10.5
Brent Fulgham
Comment 9 2016-05-27 15:51:56 PDT
(In reply to comment #7) > Comment on attachment 280001 [details] > Patch > > Attachment 280001 [details] did not pass mac-ews (mac): > Output: http://webkit-queues.webkit.org/results/1393488 > > New failing tests: > fast/scrolling/scroll-container-horizontally.html The Scroll trigger stuff doesn't work on WK1, so you should skip this test in WK1. I should have caught that during review. :-( Sorry!
Build Bot
Comment 10 2016-05-27 16:03:18 PDT
Comment on attachment 280001 [details] Patch Attachment 280001 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/1393492 New failing tests: fast/scrolling/scroll-container-horizontally.html
Build Bot
Comment 11 2016-05-27 16:03:22 PDT
Created attachment 280007 [details] Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.4
Brent Fulgham
Comment 12 2016-05-27 16:05:52 PDT
(In reply to comment #10) > Comment on attachment 280001 [details] > Patch > > Attachment 280001 [details] did not pass ios-sim-ews (ios-simulator-wk2): > Output: http://webkit-queues.webkit.org/results/1393492 > > New failing tests: > fast/scrolling/scroll-container-horizontally.html I think that's true for iOS as well. Check TestExpectations -- I think we turn off wheel even tests because we don't automatically treat wheel events as swipe gestures on iOS.
alan
Comment 13 2016-05-27 16:07:03 PDT
ok. I'll skip it on WK1 and iOS.
Build Bot
Comment 14 2016-05-27 16:12:12 PDT
Comment on attachment 280001 [details] Patch Attachment 280001 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/1393502 New failing tests: fast/scrolling/scroll-container-horizontally.html
Build Bot
Comment 15 2016-05-27 16:12:16 PDT
Created attachment 280009 [details] Archive of layout-test-results from ews114 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-yosemite Platform: Mac OS X 10.10.5
alan
Comment 16 2016-05-27 16:21:24 PDT
WebKit Commit Bot
Comment 17 2016-05-27 17:06:24 PDT
Comment on attachment 280010 [details] Patch Clearing flags on attachment: 280010 Committed r201476: <http://trac.webkit.org/changeset/201476>
WebKit Commit Bot
Comment 18 2016-05-27 17:06:29 PDT
All reviewed patches have been landed. Closing bug.
Ryan Haddad
Comment 19 2016-05-31 14:48:20 PDT
The LayoutTest added with this change if frequently timing out. Filed https://bugs.webkit.org/show_bug.cgi?id=158237
Note You need to log in before you can comment on or make changes to this bug.