EventHandler finds incorrect scrollable container. https://bugs.webkit.org/show_bug.cgi?id=158132 <rdar://problem/26423126>

Reviewed by Brent Fulgham.

Fix the logic that checks whether we are at the beginning or at the end of the container (horizontally).
While scrolling to the right, deltaX has negative values. So in case of deltaX < 0, we need to check if
the container is not scrolled all the way to the right.

Source/WebCore:

Test: fast/scrolling/scroll-container-horizontally.html

* page/mac/EventHandlerMac.mm:
(WebCore::findEnclosingScrollableContainer):

LayoutTests:

* fast/scrolling/scroll-container-horizontally-expected.txt: Added.
* fast/scrolling/scroll-container-horizontally.html: Added.
* platform/ios-simulator/TestExpectations:
* platform/mac-wk1/TestExpectations:


Canonical link: https://commits.webkit.org/176276@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201476 268f45cc-cd09-0410-ab3c-d52691b4dbfc